# legalkraus-static

./: .flake8  .gitignore  C_000001.html  C_000001.xml  C_000002.html  C_000002.xml  C_000003.html  C_000003.xml  C_000004.html  C_000004.xml  C_000005.html  C_000005.xml  C_000006.html  C_000006.xml  C_000007.html  C_000007.xml  C_000008.html  C_000008.xml  C_000009.html  C_000009.xml  C_000010.html  C_000010.xml  C_000011.html  C_000011.xml  C_000012.html  C_000012.xml  C_000013.html  C_000013.xml  C_000014.html  C_000014.xml  C_000015.html  C_000015.xml  C_000016.html  C_000016.xml  C_000017.html  C_000017.xml  C_000018.html  C_000018.xml  C_000019.html  C_000019.xml  (+12711 more)
.devcontainer/: devcontainer.json
.github/workflows/: __static.yml  build.yml  static.yml
css/: micro-editor.css  micro-editor.css.map  style.css  style.css.map
html/css/: micro-editor.css  micro-editor.css.map  style.css  style.css.map
html/js/: i18n.js  osd_scroll.js  osd_select.js  run.js  timeline.js  ts_search.js
js/: osd_select.js  run.js
locales/de/: translation.json
locales/en/: translation.json
oai-pmh/: make_files.py
scss/: micro-editor.scss  style.scss  utilities.scss  variables.scss
shellscripts/: dl_bootstrap.sh  dl_imprint.sh  script.sh
xslt/: beacon.xsl  case.xsl  editions.xsl  handapparat.xsl  imprint.xsl  index.xsl  kultur.xsl  listbibl.xsl  listfackel.xsl  listlegal.xsl  listorg.xsl  listperson.xsl  listplace.xsl  meta.xsl  politik.xsl  recht-toc.xsl  recht.xsl  search.xsl  timeline.xsl  toc-col.xsl  toc.xsl  topics.xsl  utils.xsl  vocabs.xsl
xslt/partials/: bibl.xsl  (+13 more)
(+1 files in other folders)
