[project]
name = "legalkraus-static"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "acdh-cfts-pyutils>=0.2",
    "acdh-tei-pyutils>=1.6",
    "jinja2>=3.1.6",
    "python-dateutil>=2.9.0.post0",
    "python-slugify>=8.0.4",
]
